6 July 2007
+ Closing on on functionality. Peeps and slots class created. Database
should be finalized.
+ Uninstall script written.