@@ -5,6 +5,9 @@
    */
 
 $use_permissions = true;
+
+$permissions['edit_sheet'] = dgettext('signup', 'Edit sheets');
+
 $item_permissions = false;
 
 ?>
