@@ -4,6 +4,8 @@
  * @author Matthew McNaney <mcnaney at gmail dot com>
  */
 
+PHPWS_Core::requireConfig('signup');
+
 class Signup_Peep {
     var $id         = 0;
     var $sheet_id   = 0;
@@ -29,6 +31,11 @@ class Signup_Peep {
         $this->init();
     }
 
+    function clean($text)
+    {
+        return strip_tags(trim($text));
+    }
+
     function init()
     {
         $db = new PHPWS_DB('signup_peeps');
@@ -47,9 +54,60 @@ class Signup_Peep {
 
     function getPhone()
     {
-        return sprintf('%s-%s-%s', substr($this->phone, 0, 3),
-                       substr($this->phone, 3, 3),
-                       substr($this->phone, 6, 9));
+        if (empty($this->phone)) {
+            return null;
+        }
+        $phone_format = SU_PHONE_FORMAT;
+        
+        $number = & $this->phone;
+        
+        $no_array = str_split(strrev($number));
+        $fmt_array = str_split(strrev($phone_format));
+        
+        $number_length = strlen($phone_format);
+        
+        $j=0;
+        for ($i=0; $i < $number_length; $i++) {
+            if ($fmt_array[$i] == 'x') {
+                if (isset($no_array[$j])) {
+                    $new_number_array[] = $no_array[$j];
+                    $j++;
+                } else {
+                    break;
+        }
+            } else {
+                if (isset($no_array[$j + 1])) {
+                    $new_number_array[] = $fmt_array[$i];
+                }
+            }
+        }
+        
+        $new_number_string = implode('', $new_number_array);
+        $new_number_string = strrev($new_number_string);
+        return $new_number_string;
+    }
+
+
+    function setFirstName($first_name)
+    {
+        $this->first_name = $this->clean($first_name);
+    }
+
+    function setLastName($last_name)
+    {
+        $this->last_name = $this->clean($last_name);
+    }
+
+    function setPhone($phone)
+    {
+        $this->phone = preg_replace('/\D/', '', $phone);
+
+    }
+
+    function save()
+    {
+        $db = new PHPWS_DB('signup_peeps');
+        return $db->saveObject($this);
     }
 
 }
