@@ -1,0 +1,9 @@
+<?php
+/**
+ * @version $Id$
+ * @author Matthew McNaney <mcnaney at gmail dot com>
+ */
+
+define('SU_PHONE_FORMAT', 'xxx-xxx-xxxx');
+
+?>
