@@ -1,4 +1,10 @@
-{FIRST_NAME}
-{LAST_NAME}
-{EMAIL}
-{PHONE}
+{START_FORM}
+<p><strong>{FIRST_NAME_LABEL}</strong><br />{FIRST_NAME}</p>
+<p><strong>{LAST_NAME_LABEL}</strong><br />{LAST_NAME}</p>
+<p><strong>{EMAIL_LABEL}</strong><br />{EMAIL}</p>
+<p><strong>{PHONE_LABEL}</strong><br />{PHONE}</p>
+<br />
+<p class="align-center">{SUBMIT}</p>
+<br />
+<p class="align-center">{CLOSE}</p>
+{END_FORM}
