@@ -1,3 +1,12 @@
+10 July 2007
++ added edit_sheet permission to config file
++ Edit slot link works
++ Can add and edit peeps in slots
++ Wrote parsing for phone number display. Uses new config option.
++ Sheets now save a key.
++ Rewrote loadSheet, loadSlot, loadPeep so they all depend on each
+other and autoload
+
 6 July 2007
 + Closing on on functionality. Peeps and slots class created. Database
 should be finalized.
